# notion-cli

./: .gitignore  CONTEXT.md  README.md  SKILL.md  pyproject.toml
notion_cli/: __init__.py  cli.py  client.py  formatters.py  schemas.py
notion_cli/lib/: fields.py  output.py  validate.py
tests/: test_fields.py  test_formatters.py  test_validate.py
