[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-cli"
version = "0.1.0"
description = "Minimal Notion CLI for AI agent consumption"
requires-python = ">=3.11"
dependencies = [
    "notion-client>=3.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
notion = "notion_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
